fixtures/python/fallback/should_fail/next_default.py
items = iter([])
first = next(items, None)
